chore: mobile? be my guest ;)

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
     margin: 20px;
     background: #ffffff;
-    color: #e0e0e0;
+    color: #4299e1;
 }
 
 #drop-area,
