--- a/assets/css/liveatc.css
+++ b/assets/css/liveatc.css
@@ -166,3 +166,11 @@ h1 {
     border: 1px solid #ccc;
     display: none;
 }
+
+#control-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
